--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -373,6 +373,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
+    "        \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -401,6 +402,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -445,14 +447,14 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
     "    # \"learning_rate\": [0.001, 0.0001],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25, 0.5, 1.0],\n",
-    "    \"batch_size\": [32, 64, 128, 256],\n",
+    "    \"batch_size\": [128, 256],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
     "    \"n_d\": [6, 32],\n",
@@ -474,7 +476,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -599,7 +601,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -652,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -661,12 +663,13 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
     "    # \"learning_rate\": [0.2, 0.001],\n",
-    "    \"batch_size\": [32, 64, 128, 256],\n",
+    "    \"batch_size\": [64, 128, 256],\n",
     "    \"num_layers\": [1, 2, 3],\n",
     "    \"num_trees\": [12, 128],\n",
     "    \"additional_tree_output_dim\": [2, 3, 4],\n",
@@ -690,12 +693,13 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
     "    # \"learning_rate\": [0.2, 0.001],\n",
-    "    \"batch_size\": [512, 1024],\n",
+    "    \"batch_size\": [800, 1500],\n",
     "    \"num_layers\": [1, 2, 3],\n",
     "    \"num_trees\": [12, 128],\n",
     "    \"additional_tree_output_dim\": [2, 3, 4],\n",
@@ -726,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -735,14 +739,14 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
+    " \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
-    "    \"layers\": [\"128-64-32\", \"128-64-32-16\", \"256-128-64\"],\n",
-    "    \"activation\": [\"ReLU\", \"LeakyReLU\", \"Tanh\"],\n",
+    "    \"layers\": [\"128-64-32\", \"128-64-32-16\", \"256-128-64\", \"100-50-24\",],\n",
+    "    \"activation\": [\"ReLU\", \"LeakyReLU\",],\n",
     "    \"initialization\": [\"kaiming\", \"xavier\"],\n",
     "    \"dropout\": [0.0, 0.3],\n",
     "    \"embedding_dropout\": [0.0, 0.3],\n",
@@ -767,8 +771,8 @@
     "        \"precision\": 16,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
-    "    \"layers\": [\"128-64-32\", \"128-64-32-16\", \"256-128-64\"],\n",
-    "    \"activation\": [\"ReLU\", \"LeakyReLU\", \"Tanh\"],\n",
+    "    \"layers\": [\"128-64-32\", \"100-50-24\", \"128-64-32-16\", \"256-128-64\"],\n",
+    "    \"activation\": [\"ReLU\", \"LeakyReLU\",],\n",
     "    \"initialization\": [\"kaiming\", \"xavier\"],\n",
     "    \"dropout\": [0.0, 0.3],\n",
     "    \"embedding_dropout\": [0.0, 0.3],\n",
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -807,7 +811,7 @@
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
-    "    \"batch_size\": [32, 64, 128, 256],\n",
+    "    \"batch_size\": [64, 128, 256],\n",
     "    \"embedding_bias\": [True, False],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"shared_embedding_fraction\": [0.125, 0.25, 0.5],\n",
@@ -869,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -883,7 +887,7 @@
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
-    "    \"batch_size\": [32, 64, 128, 256],\n",
+    "    \"batch_size\": [64, 128, 256],\n",
     "    # \"attn_embed_dim\": [32, 16, 64],\n",
     "    \"attn_embed_dim_multiplier\": [\n",
     "        2,\n",
@@ -924,7 +928,7 @@
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
-    "    \"batch_size\": [1024, 2048, 4096],\n",
+    "    \"batch_size\": [1024, 2048, 3500],\n",
     "    # \"attn_embed_dim\": [32, 16, 64],\n",
     "    \"attn_embed_dim_multiplier\": [\n",
     "        2,\n",
@@ -958,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1178,6 @@
       "('heloc', 'tabnet')\n",
       "('covertype', 'tabnet')\n",
       "### GATE ###\n",
-      "('ageconditions', 'gate')\n",
       "('diabetes', 'gate')\n",
       "('adult', 'gate')\n",
       "('housing', 'gate')\n",
@@ -1201,7 +1204,6 @@
       "('covertype', 's1dcnn')\n",
       "### CATEGORYEMBEDDING ###\n",
       "('adult', 'categoryembedding')\n",
-      "('covertype', 'categoryembedding')\n",
       "### FTTRANSFORMER ###\n",
       "('diabetes', 'fttransformer')\n",
       "('adult', 'fttransformer')\n",
@@ -1213,7 +1215,6 @@
       "('diabetes', 'tabtransformer')\n",
       "('adult', 'tabtransformer')\n",
       "('housing', 'tabtransformer')\n",
-      "('creditcard', 'tabtransformer')\n",
       "('heloc', 'tabtransformer')\n",
       "('covertype', 'tabtransformer')\n",
       "### GANDALF ###\n",
@@ -1224,10 +1225,8 @@
       "('heloc', 'gandalf')\n",
       "('covertype', 'gandalf')\n",
       "### AUTOINT ###\n",
-      "('ageconditions', 'autoint')\n",
       "('adult', 'autoint')\n",
       "('housing', 'autoint')\n",
-      "('creditcard', 'autoint')\n",
       "('heloc', 'autoint')\n",
       "('covertype', 'autoint')\n",
       "### NODE ###\n",
@@ -1246,23 +1245,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
+   "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('diabetes', 'catboost'),\n",
+       " ('diabetes', 'mlp'),\n",
+       " ('diabetes', 'tabnet'),\n",
+       " ('diabetes', 'gate'),\n",
+       " ('diabetes', 'resnet'),\n",
+       " ('diabetes', 's1dcnn'),\n",
+       " ('diabetes', 'fttransformer'),\n",
+       " ('diabetes', 'tabtransformer'),\n",
+       " ('diabetes', 'gandalf')]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in total_missing_combos if \"diabetes\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
-    "generate_model_template(\"creditcard\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    "generate_model_template(\"covertype\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    "generate_model_template(\"creditcard\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    "generate_model_template(\"covertype\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"iris\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"titanic\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"tabnet\", param_grid = tabnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"tabnet\", param_grid = tabnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "]\n",
     "\n",
+    "\n",
     "templates2 = [\n",
-    "generate_model_template(\"creditcard\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "generate_model_template(\"covertype\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    "generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
+    "generate_model_template(\"diabetes\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
     "]\n",
     "\n",
     "templates3 = [\n",
@@ -1270,6 +1331,9 @@
     "generate_model_template(\"covertype\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "\n",
+    "generate_model_template(\"creditcard\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
     "]\n",
     "\n",
     "templates4 = [\n",
@@ -1278,19 +1342,25 @@
     "generate_model_template(\"creditcard\",\"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "generate_model_template(\"covertype\",\"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "\n",
-    "\n",
     "generate_model_template(\"diabetes\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
     "generate_model_template(\"housing\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
     "]\n",
     "\n",
+    "\n",
+    "templates4 = [\n",
+    "generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1298,13 +1368,13 @@
     "import random\n",
     "\n",
     "#random.shuffle(templates1)\n",
-    "random.shuffle(templates2)\n",
+    "#random.shuffle(templates2)\n",
     "#random.shuffle(templates3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1340,19 +1410,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "id": "9c71f249-a547-4d37-916b-e4c7e3697185",
    "metadata": {},
    "outputs": [],
    "source": [
     "# write the dictionary to a YAML file\n",
-    "with open(\"../configuration/experiment_runs3.yml\", \"w\") as f:\n",
-    "    yaml.dump(templates3, f, sort_keys=False, default_flow_style=False)"
+    "with open(\"../configuration/experiment_runs4.yml\", \"w\") as f:\n",
+    "    yaml.dump(templates4, f, sort_keys=False, default_flow_style=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
