--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1225,12 +1225,8 @@
       "('heloc', 'gandalf')\n",
       "('covertype', 'gandalf')\n",
       "### AUTOINT ###\n",
-      "('adult', 'autoint')\n",
-      "('housing', 'autoint')\n",
-      "('heloc', 'autoint')\n",
       "('covertype', 'autoint')\n",
       "### NODE ###\n",
-      "('creditcard', 'node')\n",
       "('covertype', 'node')\n"
      ]
     }
@@ -1245,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1254,29 +1250,30 @@
     {
      "data": {
       "text/plain": [
-       "[('diabetes', 'catboost'),\n",
-       " ('diabetes', 'mlp'),\n",
-       " ('diabetes', 'tabnet'),\n",
-       " ('diabetes', 'gate'),\n",
-       " ('diabetes', 'resnet'),\n",
-       " ('diabetes', 's1dcnn'),\n",
-       " ('diabetes', 'fttransformer'),\n",
-       " ('diabetes', 'tabtransformer'),\n",
-       " ('diabetes', 'gandalf')]"
+       "[('adult', 'catboost'),\n",
+       " ('adult', 'mlp'),\n",
+       " ('adult', 'tabnet'),\n",
+       " ('adult', 'gate'),\n",
+       " ('adult', 'resnet'),\n",
+       " ('adult', 's1dcnn'),\n",
+       " ('adult', 'categoryembedding'),\n",
+       " ('adult', 'fttransformer'),\n",
+       " ('adult', 'tabtransformer'),\n",
+       " ('adult', 'gandalf')]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"diabetes\" in i]"
+    "[i for i in total_missing_combos if \"adult\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1293,6 @@
     "generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "]\n",
@@ -1360,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1398,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "9c71f249-a547-4d37-916b-e4c7e3697185",
    "metadata": {},
    "outputs": [],
@@ -1422,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
