--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,7 @@
     "        \"shuffle\": True,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
+    "        \"tol\": 0.00001,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
     "    \"hidden_size\": [1024, 2048, 4096],\n",
@@ -77,6 +78,7 @@
     "        \"shuffle\": True,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_patience\": 6,\n",
+    "        \"tol\": 0.00001,\n",
     "    },\n",
     "    \"batch_size\": [1024, 4096],\n",
     "    \"hidden_size\": [2048, 4096],\n",
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -113,6 +115,7 @@
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"early_stopping_patience\": 10,\n",
+    "        \"tol\": 0.00001,\n",
     "        \"validation_fraction\": 0.15,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
@@ -135,6 +138,7 @@
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"early_stopping_patience\": 6,\n",
+    "        \"tol\": 0.00001,\n",
     "        \"validation_fraction\": 0.15,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -364,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -373,8 +377,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -402,8 +405,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -438,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -447,8 +449,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -476,8 +477,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -521,8 +521,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "        \"attn_feature_importance\": False,\n",
@@ -553,8 +552,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "        \"attn_feature_importance\": False,\n",
@@ -592,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -601,8 +599,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -624,8 +621,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -654,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -663,8 +659,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -693,8 +688,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -730,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -739,8 +733,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    " \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    " \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -764,12 +757,10 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
-    "        \"precision\": 16,\n",
-    "    },\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"layers\": [\"128-64-32\", \"100-50-24\", \"128-64-32-16\", \"256-128-64\"],\n",
     "    \"activation\": [\"ReLU\", \"LeakyReLU\",],\n",
@@ -797,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -806,8 +797,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -836,8 +826,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -873,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -882,8 +871,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
     "    },\n",
@@ -923,8 +911,7 @@
     "    \"outer_params\": {\n",
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
-    "        \"precision\": 16,\n",
-    "        \"max_epochs\": 1000,\n",
+    "        \"precision\": 16,  \"tol\": 0.00001,        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 8,\n",
     "    },\n",
@@ -962,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1172,6 @@
       "('heloc', 'gate')\n",
       "('covertype', 'gate')\n",
       "### RESNET ###\n",
-      "('iris', 'resnet')\n",
       "('titanic', 'resnet')\n",
       "('breastcancer', 'resnet')\n",
       "('ageconditions', 'resnet')\n",
@@ -1223,7 +1209,6 @@
       "('housing', 'gandalf')\n",
       "('creditcard', 'gandalf')\n",
       "('heloc', 'gandalf')\n",
-      "('covertype', 'gandalf')\n",
       "### AUTOINT ###\n",
       "('covertype', 'autoint')\n",
       "### NODE ###\n",
@@ -1241,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1250,39 +1235,34 @@
     {
      "data": {
       "text/plain": [
-       "[('adult', 'catboost'),\n",
-       " ('adult', 'mlp'),\n",
-       " ('adult', 'tabnet'),\n",
-       " ('adult', 'gate'),\n",
-       " ('adult', 'resnet'),\n",
-       " ('adult', 's1dcnn'),\n",
-       " ('adult', 'categoryembedding'),\n",
-       " ('adult', 'fttransformer'),\n",
-       " ('adult', 'tabtransformer'),\n",
-       " ('adult', 'gandalf')]"
+       "[('diabetes', 'catboost'),\n",
+       " ('diabetes', 'mlp'),\n",
+       " ('diabetes', 'tabnet'),\n",
+       " ('diabetes', 'gate'),\n",
+       " ('diabetes', 'resnet'),\n",
+       " ('diabetes', 's1dcnn'),\n",
+       " ('diabetes', 'fttransformer'),\n",
+       " ('diabetes', 'tabtransformer'),\n",
+       " ('diabetes', 'gandalf')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"adult\" in i]"
+    "[i for i in total_missing_combos if \"diabetes\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
-    "generate_model_template(\"iris\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
-    "generate_model_template(\"breastcancer\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
-    "generate_model_template(\"titanic\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
-    "generate_model_template(\"ageconditions\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
     "generate_model_template(\"breastcancer\",\"tabnet\", param_grid = tabnet_small_param_grid.copy()),\n",
     "generate_model_template(\"ageconditions\",\"tabnet\", param_grid = tabnet_small_param_grid.copy()),\n",
     "generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -1295,23 +1275,22 @@
     "generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"titanic\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
     "]\n",
-    "\n",
     "\n",
     "templates2 = [\n",
     "generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    "\n",
+    "    \n",
     "generate_model_template(\"diabetes\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "generate_model_template(\"diabetes\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "generate_model_template(\"diabetes\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "generate_model_template(\"diabetes\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -1319,6 +1298,9 @@
     "generate_model_template(\"diabetes\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
     "generate_model_template(\"diabetes\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "generate_model_template(\"diabetes\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"diabetes\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "\n",
     "\n",
     "]\n",
     "\n",
@@ -1356,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "9c71f249-a547-4d37-916b-e4c7e3697185",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
