--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1195,10 +1195,8 @@
       "('covertype', 'catboost')\n",
       "### MLP ###\n",
       "('diabetes', 'mlp')\n",
-      "('adult', 'mlp')\n",
       "('housing', 'mlp')\n",
       "('creditcard', 'mlp')\n",
-      "('heloc', 'mlp')\n",
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
       "('breastcancer', 'tabnet')\n",
@@ -1231,7 +1229,6 @@
       "('adult', 's1dcnn')\n",
       "('housing', 's1dcnn')\n",
       "('creditcard', 's1dcnn')\n",
-      "('heloc', 's1dcnn')\n",
       "('covertype', 's1dcnn')\n",
       "### CATEGORYEMBEDDING ###\n",
       "('adult', 'categoryembedding')\n",
@@ -1271,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1280,44 +1277,37 @@
     {
      "data": {
       "text/plain": [
-       "[('breastcancer', 'tabnet'),\n",
-       " ('ageconditions', 'tabnet'),\n",
-       " ('diabetes', 'tabnet'),\n",
-       " ('adult', 'tabnet'),\n",
-       " ('housing', 'tabnet'),\n",
-       " ('creditcard', 'tabnet'),\n",
-       " ('heloc', 'tabnet'),\n",
-       " ('covertype', 'tabnet')]"
+       "[('covertype', 'xgb'),\n",
+       " ('covertype', 'catboost'),\n",
+       " ('covertype', 'mlp'),\n",
+       " ('covertype', 'tabnet'),\n",
+       " ('covertype', 'gate'),\n",
+       " ('covertype', 'resnet'),\n",
+       " ('covertype', 's1dcnn'),\n",
+       " ('covertype', 'fttransformer'),\n",
+       " ('covertype', 'tabtransformer'),\n",
+       " ('covertype', 'autoint'),\n",
+       " ('covertype', 'node')]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"tabnet\" in i]"
+    "[i for i in total_missing_combos if \"covertype\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
     "    \n",
-    "    generate_model_template(\"adult\", \"mlp\", param_grid=mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
     "    generate_model_template(\"adult\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
     "    generate_model_template(\n",
     "        \"adult\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
@@ -1338,6 +1328,16 @@
     "        \"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
+    "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"adult\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"adult\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "    \n",
+    "    generate_model_template(\n",
     "        \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
@@ -1352,10 +1352,7 @@
     "]\n",
     "\n",
     "templates2 = [\n",
-    "    generate_model_template(\"heloc\", \"mlp\", param_grid=mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
-    "    ),\n",
+    "\n",
     "    generate_model_template(\n",
     "        \"heloc\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "    ),\n",
@@ -1423,55 +1420,12 @@
     "    generate_model_template(\n",
     "        \"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "    ),\n",
-    "]\n",
-    "\n",
-    "templates4 = [\n",
-    "    generate_model_template(\n",
-    "        \"iris\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "templates4 = [\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1485,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1497,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1509,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1521,19 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "9c71f249-a547-4d37-916b-e4c7e3697185",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write the dictionary to a YAML file\n",
-    "with open(\"../configuration/experiment_runs4.yml\", \"w\") as f:\n",
-    "    yaml.dump(templates4, f, sort_keys=False, default_flow_style=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
